--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sdb-schedule-ui",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "sdb-schedule's UI",
   "main": "main.js",
   "scripts": {
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
+    "cron-parser": "^2.1.0",
     "jquery": "^3.0.0",
     "moment": "^2.13.0",
     "nconf": "^0.8.4",
